--- a/web-app/src/app/note/note.component.css
+++ b/web-app/src/app/note/note.component.css
@@ -1,14 +1,9 @@
 .keep-card-note {
-    width: 50vw;
-    height: 20vh;
-    margin: auto;
-    margin-bottom: 3em;
-}
-
-.keep-note-actions {
-    display: flex;
-    float: right;
-    margin-left: 5px;
+    width: 150px;
+    /* height: 20vh; */
+    margin: 5px;
+    /* margin-bottom: 3em; */
+    background-color: bisque 
 }
 
 .keep-note-checkbox {
